--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="location">
        <h1 class="location-timezone">TimeZone</h1>
-       <canvas class="icon" width="128" height="128"></canvas>
+       <canvas id="yo" class="icon" width="128" height="128"></canvas>
     </div>
     <div class="temperature">
         <div class="degree-section">
